Added necessary changes to make player interaction possible